# BookingService

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 005c754267d8_.py  13e7139db61d_fix_update_models.py  19f66d7f0693_initial_new_db.py  224557498878_add_timezone_for_room.py  344160ff28da_.py  3929c13b6810_.py  3b649d7529a2_.py  4eebb6229a8f_.py  536557e94452_.py  599692ed8ce1_fix_type_for_booking_code.py  7f9347006918_.py  8c17f4bc64a0_.py  9d4042b94b7e_add_timezone_for_review.py  caaef7d69351_.py  d335c7d2b050_add_ondelete_rules.py  d43613b1d126_add_timezone_for_user.py  f55927ea872d_inital_db_structure.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: security.py
backend/app/auth/models/: token.py
backend/app/core/: __init__.py  celery_config.py  celery_tasks.py  config.py  database.py  minio_handler.py
backend/app/models/: __init__.py  booking.py  review.py  room.py  room_photo.py  tag.py  tag_room.py  user.py
backend/app/repositories/: __init__.py  booking_repository.py  review_repository.py  room_repository.py  tag_repository.py  tag_room_repository.py  user_repository.py
backend/app/routes/: booking_route.py  review_route.py  room_route.py  tag_route.py  user_route.py
backend/app/schemas/: __init__.py  booking_schema.py  review_schema.py  room_photo_schema.py  room_schema.py  tag_schema.py  user_schema.py
backend/app/services/: __init__.py  booking_service.py  review_service.py  room_service.py  tag_service.py  user_service.py
(+3 files in other folders)
